--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,10 +14,7 @@
         android:theme="@style/Theme.ProyectoFinalHBO"
         tools:targetApi="31">
         <activity
-            android:name=".PeliculaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SerieActivity"
+            android:name=".Imagen1DestacadoActivity"
             android:exported="false" />
         <activity
             android:name=".InicioActivity"
